crates/ndc-clickhouse/tests/snapshots/query_builder__chinook Parameterized SQL@02_relationships_04_child_predicate.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: parameterized_sql
input_file: crates/ndc-clickhouse/tests/query_builder/chinook/02_relationships_04_child_predicate.request.json
---
SELECT
  toJSONString(
    groupArray(
      cast(
        "_rowset"."_rowset",
        'Tuple(rows Array(Tuple("albumId" Int32, "artistId" Int32, "title" String, "Tracks" Tuple(rows Array(Tuple("trackId" Int32, "name" String, "unitPrice" Float64))))))'
      )
    )
  ) AS "rowsets"
FROM
  (
    SELECT
      tuple(
        groupArray(
          tuple(
            "_row"."_field_albumId" AS "albumId",
            "_row"."_field_artistId" AS "artistId",
            "_row"."_field_title" AS "title",
            "_row"."_field_Tracks" AS "Tracks"
          )
        ) AS "rows"
      ) AS "_rowset"
    FROM
      (
        SELECT
          "_origin"."AlbumId" AS "_field_albumId",
          "_origin"."ArtistId" AS "_field_artistId",
          "_origin"."Title" AS "_field_title",
          "_rel_0_Tracks"."_rowset" AS "_field_Tracks"
        FROM
          "Chinook"."Album" AS "_origin"
          LEFT JOIN (
            SELECT
              tuple(
                groupArray(
                  tuple(
                    "_row"."_field_trackId" AS "trackId",
                    "_row"."_field_name" AS "name",
                    "_row"."_field_unitPrice" AS "unitPrice"
                  )
                ) AS "rows"
              ) AS "_rowset",
              "_row"."_relkey_AlbumId" AS "_relkey_AlbumId"
            FROM
              (
                SELECT
                  "_origin"."TrackId" AS "_field_trackId",
                  "_origin"."Name" AS "_field_name",
                  "_origin"."UnitPrice" AS "_field_unitPrice",
                  "_origin"."AlbumId" AS "_relkey_AlbumId"
                FROM
                  "Chinook"."Track" AS "_origin"
                WHERE
                  "_origin"."TrackId" > { p0 :Int32 }
              ) AS "_row"
            GROUP BY
              "_row"."_relkey_AlbumId"
          ) AS "_rel_0_Tracks" ON "_origin"."AlbumId" = "_rel_0_Tracks"."_relkey_AlbumId"
        WHERE
          "_origin"."ArtistId" > { p1 :Int32 }
      ) AS "_row"
  ) AS "_rowset" FORMAT TabSeparatedRaw;
