crates/ndc-clickhouse/tests/snapshots/query_builder__chinook Parameters@03_variables_02_empty_variable_sets.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: printed_parameters
input_file: crates/ndc-clickhouse/tests/query_builder/chinook/03_variables_02_empty_variable_sets.request.json
---
param_p0={"_varset_id":[]}
